# airliquide-sustainability-challenge

./: .gitignore  Dockerfile  README.md  config.yaml  helpers.py  pyproject.toml  requirements.txt  setup.cfg
data/raw/RRN/: BORNAGE_TOUT.shx
data/raw/airesPL/: Aires_logistiques_denses.dbf  Aires_logistiques_elargies.dbf  Aires_logistiques_elargies.shx
data/raw/regions/: regions_2016.shp  regions_2016.shx
h2_station_distributor/: Home.py  config.yaml
h2_station_distributor/data/: regional_strategies2040.csv  reqs_df.csv  stations_10000_2030.csv
h2_station_distributor/data/raw/: regional_strategies2030.csv  statA.csv  statB.csv  stations_10000.csv
h2_station_distributor/data/raw/RRN/: BORNAGE_TOUT.shp  VSMAP_TOUT.shx
h2_station_distributor/data/raw/airesPL/: Aires_logistiques_denses.shp  Aires_logistiques_denses.shx  Aires_logistiques_elargies.shp
h2_station_distributor/data/raw/regions/: regions_2016.dbf
h2_station_distributor/data/raw/water_bodies/: water_bodies.dbf  water_bodies.shx
h2_station_distributor/models/: production_plants.py  size_the_network.py  stations.py
h2_station_distributor/pages/: 0Deployment Scenarios.py  1Location of Stations.py  2Competition Scenarios.py  3Production Plants Location.py
h2_station_distributor/utils/: generate_regional_breakdown.py  helpers.py  load_data.py  size_the_network.py
models/: size_the_network.py
notebooks/: Introduction to the library.ipynb  Sustainability_part_1.ipynb  exploratory_data_analysis_cam.ipynb  youssef.ipynb
utils/: load_data.py
