[tool.poetry]
name = "airliquide-sustainability-challenge-1"
version = "0.1.0"
description = ""
authors = ["youssefjouini <mohamed-youssef.jouini@hec.edu>"]
readme = "README.md"
packages = [{include = "airliquide_sustainability_challenge_1"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
geopandas = "^0.12.2"
matplotlib = "^3.7.1"
pandas = "^1.5.3"
notebook = "^6.5.3"
numpy = "^1.24.2"
requests = "^2.28.2"
selenium = "^4.8.2"
shapely = "^2.0.1"
streamlit = "^1.20.0"
pyyaml = "^6.0"
plotly = "^5.13.1"
pyproj = "^3.4.1"
streamlit-folium = "^0.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
