[metadata]
name = h2_station_distributor
version = 0.0.1
description = This package distributes H2 fueling stations and H2 production sites across France
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    geopandas
    matplotlib<3.7
    pandas
    notebook
    numpy
    requests
    selenium
    shapely
    streamlit
    PyYAML
python_requires = >=3.8

[options.packages.find]
exclude =
    notebooks*
    tests*
